--- a/style.css
+++ b/style.css
@@ -1,24 +1,68 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; 
+}
+
+
 header{
     border-bottom: 1px solid black;
+    text-align: center;
   }
   
-  main{
-    width: 800px;
+  section{
+    width: 70%;
+    margin-top: 50px;
+    /* text-align: center; */
+
   }
+
+  .bloco{
+    margin-left: 48%
+  }
+  #a{
+    padding-bottom: 5vw 
+  }
+
+  #b{
+    padding-bottom: 5vw 
+  }
+
+  #c{
+    padding-bottom: 5vw 
+  }
+
   
   aside{
+    text-align: center;
     width: 180px;
     border: 1px solid black;
+    position: fixed;
+    bottom: 4vh;
+    right: 0;
   }
   
   footer{
     background-color: black;
     color: white;
     width: 100%;
+    position: sticky;
+    bottom: 0;
+    right: 0; 
   }
-  
+ 
   button{
     background-color: black;
     color: white;
     font-family: serif;
   }
+
+  aside:has(#botao:active){
+    color:white;
+    background-color: black;
+ }
+  
+  button:active{
+    background-color: white;
+    color:black;
+ }
